# figurehead-rs

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  COVERAGE_ANALYSIS.md  COVERAGE_SUMMARY.md  Cargo.toml  Justfile  PROMPT.md  README.md  TASKS.md  WASM.md  release.toml
.github/workflows/: ci.yml
crates/figurehead/: Cargo.toml
crates/figurehead-cli/: Cargo.toml
crates/figurehead-cli/src/: cli.rs  colorizer.rs  main.rs
crates/figurehead-cli/tests/: pty_output.rs  visual_output.rs
crates/figurehead/examples/: debug_lr.rs  test_labels.rs  test_lr.rs
crates/figurehead/src/: lib.rs  wasm.rs
crates/figurehead/src/core/: box_drawing.rs  canvas.rs  chumsky_utils.rs  database.rs  detector.rs  edge_routing.rs  error.rs  layout.rs  logging.rs  mod.rs  parser.rs  renderer.rs  syntax.rs  text.rs  types.rs
crates/figurehead/src/plugins/: mod.rs  orchestrator.rs
crates/figurehead/src/plugins/class/: chumsky_parser.rs  database.rs  detector.rs  layout.rs  mod.rs  parser.rs  renderer.rs
crates/figurehead/src/plugins/flowchart/: chumsky_parser.rs  database.rs  detector.rs  layout.rs  mod.rs  ordering.rs  parser.rs  renderer.rs  whitespace.rs
crates/figurehead/src/plugins/gitgraph/: database.rs  detector.rs  layout.rs  mod.rs  parser.rs  renderer.rs  syntax_parser.rs
crates/figurehead/src/plugins/sequence/: database.rs  detector.rs  layout.rs  mod.rs  parser.rs  renderer.rs
crates/figurehead/src/plugins/state/: database.rs  detector.rs  layout.rs  mod.rs  parser.rs  renderer.rs
crates/figurehead/tests/: api.rs  chumsky_parser_coverage.rs  edge_cases.rs  error_tests.rs  flowchart_database_coverage.rs  flowchart_detector_coverage.rs  flowchart_renderer_coverage.rs  gitgraph_coverage.rs  gitgraph_renderer_coverage.rs  layout_spacing.rs  lib_api.rs  logging.rs  logging_coverage.rs  logging_filtering.rs  logging_integration.rs  snapshots.rs  types_display.rs
crates/figurehead/tests/fixtures/: all_shapes.txt  asymmetric_shape.txt  class_all_relationships.txt  class_association_label.txt  class_composition.txt  class_full_featured.txt  class_inheritance.txt  class_multiple.txt  class_simple.txt  class_with_attributes.txt  class_with_methods.txt  complex_flowchart.txt  diamond_decision_lr.txt  diamond_decision_td.txt  flowchart_multi_path.txt  gitgraph_multi_branch.txt  gitgraph_simple_lr.txt  gitgraph_simple_td.txt  gitgraph_with_branch.txt  gitgraph_with_ids.txt  labeled_edges.txt  long_labels.txt  sequence_all_arrows.txt  sequence_open_arrows.txt  sequence_simple.txt  sequence_three_participants.txt  sequence_with_aliases.txt  simple_chain_lr.txt  simple_chain_td.txt  subgraph_lr.txt  subgraph_multiple.txt  subgraph_td.txt
docs/ideal-output/: 01_basic_lr.mmd  01_basic_lr.unicode.ideal.txt  02_decision_join_td.mmd  02_decision_join_td.unicode.ideal.txt  03_subgraph_cluster_lr.mmd  03_subgraph_cluster_lr.unicode.ideal.txt  04_wrapped_label_lr.mmd  04_wrapped_label_lr.unicode.ideal.txt  05_fanin_lr.mmd  05_fanin_lr.unicode.ideal.txt  06_edge_styles_lr.mmd  06_edge_styles_lr.unicode.ideal.txt  07_shapes_gallery_lr.mmd  07_shapes_gallery_lr.unicode.ideal.txt  08_invisible_edges_td.mmd  08_invisible_edges_td.unicode.ideal.txt  GAPS.md  README.md
docs/plans/: 2025-12-12-compact-layout-design.md  2025-12-12-compact-layout-impl.md  2025-12-26-subgraph-support-design.md  2025-12-30-class-diagram-design.md  2025-12-30-state-diagram-design.md
examples/web-editor/: .gitignore  Cargo.toml  README.md  editor.html  index.html  manifest.json  server.rs  sw.js
src/: cli.rs  lib.rs  main.rs
src/core/: database.rs  detector.rs  diagram.rs  error.rs  layout.rs  mod.rs  parser.rs  renderer.rs
src/plugins/: mod.rs  orchestrator.rs
src/plugins/flowchart/: chumsky_parser.rs  database.rs  detector.rs  layout.rs  mod.rs  parser.rs  renderer.rs
tests/: wasm_integration.rs
