[workspace]
resolver = "2"
members = [
    "crates/figurehead",
    "crates/figurehead-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Matthew Krohn <matthew.d.krohn@gmail.com>"]
license = "MIT"
repository = "https://github.com/mkroehn/figurehead-rs"

[workspace.dependencies]
anyhow = "1.0"
chumsky = "0.11.2"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.27"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
unicode-width = "0.1"
proptest = "1.9.0"
tempfile = "3.8"
