[package]
name = "figurehead-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "CLI tool to convert Mermaid.js diagram markup into ASCII diagrams"
keywords = ["mermaid", "ascii", "diagram", "cli", "flowchart"]
categories = ["command-line-utilities", "graphics", "visualization"]

[[bin]]
name = "figurehead"
path = "src/main.rs"

[dependencies]
figurehead = { version = "0.2.0", path = "../figurehead" }
anyhow.workspace = true
clap.workspace = true
crossterm.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
expectrl = "0.8.0"
png = "0.18.0"
tempfile.workspace = true
text-to-png = "0.3.0"
