[package]
name = "figurehead"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "A Rust library to convert Mermaid.js diagram markup into ASCII diagrams"
keywords = ["mermaid", "ascii", "diagram", "converter"]
categories = ["graphics", "visualization", "parsing"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow.workspace = true
chumsky.workspace = true
thiserror.workspace = true
unicode-width.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen.workspace = true
console_error_panic_hook.workspace = true
tracing-wasm.workspace = true
serde_json.workspace = true

[dev-dependencies]
proptest.workspace = true
wasm-bindgen-test = "0.3"

[features]
default = ["flowchart"]
flowchart = []
sequence = []
class = []
