[package]
name = "figurehead-web-server"
version = "0.1.0"
edition = "2021"
authors = ["Matthew Krohn <matthew.d.krohn@gmail.com>"]
license = "MIT"
repository = "https://github.com/mkroehn/figurehead-rs"
description = "Simple HTTP server for Figurehead web examples"

[workspace]

[[bin]]
name = "server"
path = "server.rs"

[dependencies]
